--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,6 +14,8 @@
 
         {{ partial "nav.html" . }}
 
+        <!-- {{ partial "slide.html" .}} -->
+
         {{ partial "carousel.html" . }}
 
         {{ partial "features.html" . }}
@@ -21,6 +23,8 @@
         {{ partial "testimonials.html" . }}
 
         {{ partial "see_more.html" . }}
+
+        {{ partial "devices.html" . }}
 
         {{ partial "recent_posts.html" . }}
 
