--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -18,4 +18,5 @@
 
 <!-- owl carousel -->
 <script src="{{ "js/owl.carousel.min.js" | relURL }}"></script>
-
+<script type="text/javascript" src="/js/carousel.js"></script>
+<link rel="stylesheet" href="/css/carousel.css">
